# dreamer4

./: .gitignore  README.md  collect_phase0_data.py  download_pretrain_data.py  environment.yaml  pyproject.toml  run_cycles.sh  run_cycles_pretrain.sh  train_dynamics.py  train_phase1a_tokenizer.py  train_phase1b_dynamics.py  train_phase2_finetuning.py  train_phase3_imagination.py  train_tokenizer.py
configs/: collect_phase0.yaml  download_pretrain.yaml  run.yaml  train_dynamics.yaml  train_phase1a_tokenizer.yaml  train_phase1b_dynamics.yaml  train_phase2_finetuning.yaml  train_phase3_imagination.yaml  train_tokenizer.yaml
configs/agent/: base.yaml  base_128x128.yaml  base_64x64.yaml  large_64x64.yaml  small.yaml
configs/collect/: base.yaml
configs/data/: cluster.yaml  local.yaml
configs/download/: base.yaml
configs/dynamics/: base.yaml  base_128x128.yaml  base_64x64.yaml  large_64x64.yaml  small.yaml
configs/finetune/: base.yaml  base_128x128.yaml  base_64x64.yaml  large_64x64.yaml  small.yaml
docs/: PLAN_ORDEN_REPO_FASES.md  architecture.md  dreamer4_presentation.tex  paper.md
dreamer4/: losses.py  viz.py
scripts/: convert_frames_to_res.py  convert_pt_to_hdf5.py  debug_inspect_frames.py  download_pretrain_data.py  dreamer.py  generate_task_embeddings.py  run.py
slurm/: collect_all.sh
src/: agent.py  checkpoint_utils.py  collector.py  distributions.py  goal_dataset.py  hdf5_episode_dataset.py  interactive.py  loss_norm.py  losses.py  model.py  preprocess_dataset.py  sharded_frame_dataset.py  task_set.py  vec_collector.py  viz.py  wm_dataset.py
(+58 files in other folders)
